<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWater</string>

    <string name="action_settings">Settings</string>

    <string name="settings_metric_unit">Единицы измерения</string>
    <string name="settings_english_units">Английская</string>
    <string name="settings_metric_units">Метрическая</string>

    <string name="settings_gender">Пол</string>
    <string name="settings_male">Мужской</string>
    <string name="settings_female">Женский</string>

    <string name="settings_weight">Вес</string>
    <string name="settings_set_weight">Укажи вес</string>
    <string name="settings_physical_load">Физические нагрузки</string>
    <string name="settings_trainings">Тренировки</string>
    <string name="settings_volume_descr">В день тебе необходимо выпивать 1,8 л\n воды, но при желании ты можешь\n изменить эту цифру</string>
    <string name="settings_volume_placeholder">1800 мл</string>

    <string name="notifications_notify">Уведомления</string>
    <string name="notifications_notify_allow">Включить уведомления</string>
    <string name="notifications_descr">Лучше всего пить по стакану воды раз\n в два-три часа. Мы позаботимся о вас и\n напомним вам в нужное время</string>
    <string name="notifications_interval_placeholder">2 часа</string>
    <string name="notifications_interval">Интервал</string>
    <string name="notifications_send_to_placeholder">22:00</string>
    <string name="notifications_send_to_title">До скольки</string>
    <string name="notifications_send_from_placeholder">09:00</string>
    <string name="notifications_send_from_title">Со скольки</string>

    <string name="main_data_volume">%1$.1f %2$s из %3$.1f %2$s</string>
    <string name="main_data_percent">%1$d%2$s</string>
    <string name="main_message_default">Привет! Ты за\n сегодня выпил</string>

    <string name="chooser_drinks_title">Выбери напиток</string>
    <string name="chooser_volume_title">Выбери объём</string>
    <string name="chooser_volume_text">%1$d &lt;b>%2$s&lt;/b></string>
    <string name="title_activity_top_content">ContentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="empty_message_text">В твоей статистике пока\n ничего нет. Добавь что-нибудь!</string>

    <!--<string name="cd_main_add_drink">Add drink button</string>-->


</resources>
