<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rm.mywater.ui.NotificationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:clipToPadding="false">

        <include
            android:id="@+id/box_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            layout="@layout/box_notifications"
            />

        <TextView
            android:id="@+id/send_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/box_notifications"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/color_settings_title"
            android:text="@string/notifications_send_from_title"/>

        <TextView
            android:id="@+id/send_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_from_text"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/notifications_send_from_placeholder"
            android:textColor="@android:color/secondary_text_light"
            android:clickable="true"/>

        <View
            android:id="@+id/send_from_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/send_from"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#cccc"
            />

        <TextView
            android:id="@+id/send_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_from_separator"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/color_settings_title"
            android:text="@string/notifications_send_to_title"/>

        <TextView
            android:id="@+id/send_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_to_text"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/notifications_send_to_placeholder"
            android:textColor="@android:color/secondary_text_light"
            android:clickable="true"/>

        <View
            android:id="@+id/send_to_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/send_to"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#cccc"
            />

        <TextView
            android:id="@+id/interval_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_to_separator"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/color_settings_title"
            android:text="@string/notifications_interval"/>

        <TextView
            android:id="@+id/interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/interval_text"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:text="@string/notifications_interval_placeholder"
            android:textColor="@android:color/secondary_text_light"
            android:clickable="true"/>

        <View
            android:id="@+id/interval_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/interval"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#cccc"
            />

        <TextView
            android:id="@+id/notifications_descr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/interval_separator"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="14sp"
            android:textColor="@color/color_settings_title"
            android:text="@string/notifications_descr"
            android:gravity="center"
            />


    </RelativeLayout>
</ScrollView>

